# placefinder

./: .gitignore  Makefile  README.md  kebabs.csv  kebabs.sqlite3  main.py  paris_france_places_20250225_212551.csv  paris_kebab_shops.db  pyproject.toml
.github/workflows/: ci.yml
placefinder/: LocationFactory.py  Locations.py  MenuAnalyzer.py  __init__.py  __main__.py  env.py  summary.py  t.py  terminal.py  util.py
placefinder/ocr/: VisualAnalyzer.py
placefinder/services/: GMaps.py
src/: db.py  env.py  main.py  t.py
