[project]
name = "kebabesque"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "googlemaps>=4.10.0",
    "loguru>=0.7.3",
    "peewee>=3.17.9",
    "pydantic>=2.10.6",
    "pydantic-extra-types>=2.10.2",
    "python-dotenv>=1.0.1",
    "types-peewee>=3.17.9.20250210",
]

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "ruff>=0.9.7",
]
